# qt540-ogl

./: CMakeLists.txt  qt540-ogl.pro
inc/: openglelement.h
qml/: main.qml
src/: main.cpp  openglelement.cpp
